2009-12-02 Rupert Germann <rupi@gmx.li>
	* fixed bug #12848: !!! Database change !!! using caching framework for internal caching fails with exception. 
	* fixed bug #12808: Duplicated '?>' in class.tx_ttnews_cache.php (thanks to Stephan Bauer)
	* release of tt_news 3.0.1

2009-11-27 Rupert Germann <rupi@gmx.li>
	* fixed bug #9215: tt_news 3.0 category ajaxtree looses language parameter on ajax expand/collapse 
	* fixed bug #12757: IFNULL statements in tt_news queries are not DBAL compatible 
	* updated context sensitive help (CSH)
	* added missing xclass statement to class tt_news_cache
	* updated ext_emconf.php	
	* release of tt_news 3.0
	
2009-11-26  Rupert Germann <rupi@gmx.li>
	* added flashmessages icons for older TYPO3 versions to folder compat/gfx
	* changed "disallowed categories" message in tceforms to use flashmessages 
	* changed tt_news form: moved "hidden" field to the "General" tab and moved author-email to a palette (Thanks to Georg Ringer)
	* follow-up to feature #12118: removed tab "Typoscript" from flexform and moved the new "typoscript" field to the "other settings" tab
	* follow-up to feature #12118: added a condtion to the flexform field "typoscript" which hides this field from non-admin users
	* updated doc "changes in tt_news 3.0"
	* added feature #12763: integate possibility to convert tt_news to USER_INT using $this->cObj->convertToUserIntObject() 
	  (requires TYPO3 4.3 to work) (Thanks to Krystian Szymukowicz)
	* Started to update the tt_news manual

2009-11-25  Rupert Germann <rupi@gmx.li>
	* fix: ajax error in news-admin module when clicking the "show thumbs" checkbox in a list which shows news from a certain category
	* fixed bug #12750: added a new icon for the content element wizard (Thanks to Georg Ringer)
	* fixed bug #4488: update script not DBAL ready
	* fixed some wrong wording in code comments
	* fixed broken date in xml feeds (wrong "$this->$this" in class tx_ttnews)